# kyiv_university_oct_2021

./: .gitignore  README.rst  pyproject.toml
notebooks/: ukraine_street_network_orienation.ipynb
presentation/: kyiv_university_oct_2021.tex  references.bib
tests/: test_kyiv_university_oct_2021.py
