[tool.poetry]
name = "kyiv_university_oct_2021"
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
jupyterlab = "^3.1.14"
numpy = "^1.21.2"
pandas = "^1.3.3"
scipy = "^1.7.1"
osmnx = "^1.1.1"
geopandas = "^0.10.0"
contextily = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
